# dna-generator

./: .gitignore  DOCUMENTATION.md  MANIFEST.in  README.md  TODO.md  analysis_exhaustive_search.md  benchmark_simple.py  benchmark_validation.py  poc_exhaustive_15nt.py  pyproject.toml  requirements.txt  setup.py
benchmarks/: benchmark_generator.py
dna_generator/: __init__.py  __main__.py  backtracking_engine.py  config.py  default_profiles.json  exceptions.py  generator.py  profile_loader.py
examples/: basic_generation.py  custom_validation.py  primer_design.py  sequence_library.py
tests/: test_cli_quiet_logging.py  test_cli_random_variety.py  test_generator.py  test_periodicity.py  test_rng_and_distribution.py  test_validation.py
