[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dna-generator"
version = "1.0.0"
description = "Deterministic DNA sequence generator with biochemical quality control"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = ""},  # TODO: Add author name
]
keywords = ["dna", "bioinformatics", "sequence-generation", "primer-design", "pcr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "dna-commons>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
vis = [
    "matplotlib>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/miskiewiczm/dna-generator"
Repository = "https://github.com/miskiewiczm/dna-generator"
Issues = "https://github.com/miskiewiczm/dna-generator/issues"

[project.scripts]
dna-generator = "dna_generator.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=dna_generator --cov-report=term-missing"

[tool.coverage.run]
source = ["dna_generator"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
